# Smolathon_vsuet_hack_lab__vsuet

./: README.md  database-smol.sql  pyproject.toml
app/: admin.py  database.py  main.py  models.py  schemas.py
